Working drop system Updated random stuff to Java 16